overflowx fixed

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -3,4 +3,5 @@
   height: 100vh;
   margin: 0 auto;
   position: relative;
+  overflow-x: hidden;
 }
